--- a/deno.json
+++ b/deno.json
@@ -1,5 +1,14 @@
 {
   "imports": {
-    "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.11.1"
-  }
+    "@luca/esbuild-deno-loader": "jsr:@luca/esbuild-deno-loader@^0.11.1",
+    "@std/expect": "jsr:@std/expect@^1.0.9"
+  },
+  "compilerOptions": {
+    "strict": true,
+    "noImplicitAny": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true
+  },
+  "include": ["src/**/*", "bundle.ts"],
+  "exclude": ["node_modules", "dist"]
 }
